# reaxXtract

./: LICENSE  README.md  pyproject.toml  reaXtract.py  reaxXtract.py
atomigraph/: cli.py  core.py  logger.py  reader.py  utils.py
examples/02_PEEK_many_reactions/: README
examples/02_PEEK_small_multiple_files/: bonds.reaxff.0.dump  bonds.reaxff.1000.dump  bonds.reaxff.2000.dump  bonds.reaxff.dump
examples/example/: README  bonds.reaxff.dump
reaxXtract/: __init__.py  cli.py  core.py  logger.py  reader.py  utils.py
reaxXtract/reaxXtract/: __main__.py
