[project]
name = "reaxXtract"
version = "0.1.0"
description = "Analysis and visualization tool for ReaxFF bond topology files"
authors = [{name="Wolfgang Verestek"}]
license = {text="MIT"}
requires-python = ">=3.12"
dependencies = [
    "networkx>=2.8.8",
    "matplotlib>=3.6.3",
    "pandas>=2.0",
    "numpy>=1.26.4"
]

[project.scripts]
reaxXtract = "reaxXtract.cli:main"
