[project]
name = "reaxXtract"
version = "0.0.1"
description = "Analysis and visualization tool for ReaxFF bond topology files"
authors = [{name="Wolfgang Verestek"}]
license = {text="MIT"}
requires-python = ">=3.12.3"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "matplotlib>=3.6.3",
    "networkx>=2.8.8"
]

[project.scripts]
reaxXtract = "reaxXtract.cli:main"
