[project]
name = "AtomiGraph"
version = "0.0.1"
description = "Atomistic Graph Analysis and Visualization tool for bond topology on top of NetworkX"
authors = [{name="Wolfgang Verestek"}]
license = {text="MIT"}
requires-python = ">=3.12.3"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "matplotlib>=3.6.3",
    "networkx>=2.8.8"
]

[project.scripts]
AtomiGraph = "AtomiGraph.cli:main"
